# snake-braille

./: README.md  pyproject.toml
src/snake_braille/: __init__.py  braille_key.py  braille_keyboard.py  main.py  six_key.py
